--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
+            <h1 class="cover-heading">Welcome here!</h1>
+            <ul>
+              <li> <a href="./post/201-proj.html"> 201-proj1 </li>
+               <li> <a href="./post/validate-binary-tree.html">Validate binary tree</li>
+            </ul>          
+          
           </div>
 
           <div class="mastfoot">
