--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class = "col-md-4">
 
 
-  <img src="http://imgur.com/3jjnYsn" alt="profile" style="width:304px;height:228px;">
+  <a href="http://imgur.com/3jjnYsn"><img src="http://i.imgur.com/3jjnYsn.jpg" title="source: imgur.com" style="width:230px;height:228px;"/></a>
           </div>
         
             <div class = "col-md-6">
