--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>Hi! I'm Hui Yang, a M.S student in computer science at University of California, Riverside. I am from <a href="http://en.wikipedia.org/wiki/Shenzhen_University">Shenzhen University</a>
                     <br><br>I grow up in <a href="http://en.wikipedia.org/wiki/Shenzhen">Shenzhen</a>, which is next to Hong Kong. <br> <br>
 
-My area of interests are computer networks and distributed systems. Now I am doing research in live video streaming/CDN/distributed systems area<br> <br>
+My area of interests are computer networks and distributed systems. Now I am doing research in live video streaming/CDN.<br> <br>
 
                   
                 <strong>Email</strong>: csseryang [at] gmail [dot] com</p>  
