--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class = "col-md-6">
                <p>Hi! I'm Hui Yang, I received my Master's from UC Riverside and my Bachelor's from  <a href="http://en.wikipedia.org/wiki/Shenzhen_University"> Shenzhen University.</a>
                   <br><br>I grow up in <a href="http://en.wikipedia.org/wiki/Shenzhen">Shenzhen</a>, which is next to Hong Kong. <br> <br>
-                  My area of interests are computer networks and distributed systems. Now I am working as a backend engineer at a small startup company at.<br> <br>
+                  My area of interests are computer networks and distributed systems. Now I am working as a backend engineer at a small startup company at Torrance, CA.<br> <br>
                   <strong>Email</strong>: csseryang [at] gmail [dot] com
                </p>
                [<a href="https://drive.google.com/open?id=0B428rXBxUzFeM2VFUVhqUVhINzQ">cv</a>] [ <a href="https://www.linkedin.com/in/hui-yang-3b5482a1
@@ -53,7 +53,7 @@
          </div>
              <p>  
                <ul>
-            <li>Develop RESTfulAPI for live streaming IOS/AndroidAPPs </li>
+            <li>Develop RESTful APIs for live streaming IOS/AndroidAPPs </li>
             <li>Develop new server synchronization api with websocket protocol </li>
              <li> Migrate existing backend APIs to Amazon API gateway/lambda </li>
             <li> <strong>  Environment: </strong>     Startup experience, JavaEE, Servlet, MySQL, AWS, SVN, Tomcat, </li>
@@ -71,7 +71,7 @@
          <br>
          <div>
             <ul>
-               <li>  Researchtopicwhichaimsatreducinglatencyforlivestreaminge.g.Twitch/Youtubelive/FacebookLive   </li>
+               <li>  Research topic which aims at reducing latency for livestreaming e.g.Twitch/Youtubelive/FacebookLive   </li>
                <li>  Implement a broadcasting prototype in Python with ffmpeg/vlc on Azure/Wowza media servers with over 30 Virtual machines. </li>
                 <li> <strong> Environment: </strong>     Wowza/living streaming/ research    </li>
             </ul>
@@ -105,7 +105,7 @@
                 <div> UC Riverside   <div class="pull-right">   September 2015 - March  2017 </br> </div>
                </div>
                <br>
-               <div> Shenzhen University   <div class="pull-right">   September 2011- July  2015 </br> </div>
+               <div> Shenzhen University, China   <div class="pull-right">   September 2011- July  2015 </br> </div>
                </div>
           
          </div>
