--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          </div>
          <div>
             <strong>
-               Backend engineer   </strong>    
+               Backend engineer, CybEye Inc  </strong>    
             <div class="pull-right">   May 2017 - Present</br></div>
          </div>
              <p>  
@@ -97,7 +97,17 @@
             </p> 
          </div>
 
-         
+         <br>
+          <div>
+            <h3> Others </h3>
+
+            <ul>
+               <li>   [<a href="https://www.youtube.com/watch?v=M7S1sDhXUX4"> C#-Based Video Game: </a>] Developed with Unity3D in c#. A first person 3D maze game.  </li> 
+               <li>   [<a href="http://i.imgur.com/hu0gxd2.gifv"> C++ Data Process Tool for Bioengineering C: </a>] A computational tool developed for a biogneering professor at UCR. Based on QT and matplotlib. </li> 
+               <li>   [<a href="https://drive.google.com/open?id=0B428rXBxUzFeeEhxT1VJV0R4eG8"> Java-baesd Router Malware Detection: </a>]  Use machine learning algorithms to analyze router system call traces for malware detection.  </li>  
+            </ul>
+          
+         </div>
 
          <div class="page-header">
             <h3>Education Background</h3>
