--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
              <p>  
                <ul>
             <li>Develop RESTful APIs for live streaming IOS/Android APPs </li>
-            <li>Develop new server synchronization api with websocket protocol </li>
+            <li>Develop new server synchronization API with websocket protocol </li>
              <li> Migrate existing backend APIs to Amazon API gateway/lambda </li>
             <li> <strong>  Environment: </strong>     Startup experience, JavaEE, Servlet, MySQL, AWS, SVN, Tomcat, </li>
                </ul>
