--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link href="http://getbootstrap.com/assets/css/docs.min.css" rel="stylesheet">
       <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
       <!-- Custom styles for this template -->
-      <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+      <link href="https://getbootstrap.com/docs/3.3/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
       <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
       <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
       <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
