--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <title>Welcome!</title>
       <!-- Bootstrap core CSS -->
       <link href="http://getbootstrap.com/assets/css/docs.min.css" rel="stylesheet">
-      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="dist/bootstrap.min.css" rel="stylesheet">
       <!-- Custom styles for this template -->
       <link href="https://getbootstrap.com/docs/3.3/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
       <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
