--- a/index.html
+++ b/index.html
@@ -63,46 +63,66 @@
          </div>
          <p>  
          <ul>
-            <li>Developed new server synchronization API with Websocket protocol</li>
-            <li>Debugged and maintained RESTful APIs for live streaming IOS/Android Apps </li>
-            <li> Migrate existing backend APIs to Amazon API gateway/lambda </li>
-            <li> Tuned up SQL database performance with over millions of records, replicated MySql with Master-Slave Pattern </li>
-            <li class="text-success"> <strong>  Environment: </strong>   Startup experience, JavaEE/Maven, Servlet/Spring, Tomcat, SVN, AWS EC2/RDS/Api Gateway/Lambda,  MySQL, Websocket, Javascript    </li>
+            <li> Migrate Java backend Code to AWS with Api Gateway/Lambda/DynamoDB to achieve serverless architecture.</li>
+            <li> Implement tension test service with Java Multi-threading and Apache module by mimicking user actions with APIs. </li>
+            <li> Extend and maintain RESTFul APIs to support IOS/Android live streaming apps and Html5 Web Apps.  </li>
+            <li> Comfortable with working within an Agile/Scrum environment. </li>
+            <li class="text-success"> <strong>  Environment: </strong>   Startup experience, JavaEE/Maven, Servlet/Spring, Tomcat, SVN, AWS EC2/RDS/Api Gateway/Lambda,  MySQL, Websocket, Javascript   </li>
          </ul>
          </p>
          <br>
          <div class="page-header">
             <h3>Project Experience</h3>
          </div>
-         <div>
-            [<a href=".">paper</a>] <strong>
-            CDN research of live streaming </strong>     
-            <div class="pull-right">   September 2015 - August  2016 </br></div>
-         </div>
-         <br>
-         <div>
-            <ul>
-               <li>  Designed and implemented network flow algorithm for professor in live streaming research topics e.g Twitch/YouTube Live </li>
-               <li> Implemented a broadcasting prototype with ffmpeg/Wowza Media server on Microsoft Azure with over 30 VMs, achieving 10% less latency  </li>
-               <li class="text-success" > <strong> Environment: </strong>   Python, Microsoft Azure, convex optimization, vlc/ffmpeg/Wowza, Wireshark/tcpdump/tc    </li>
-            </ul>
-            <br>
-         </div>
-         <div>
+            <div>
             [<a href=".">source code</a>] [<a href=".">demo</a>]  <strong>
-            Java-Based  Online banking system  </strong>   
-            <div class="pull-right">   March 2017 - June 2017 </br></div>
+            NodeJS Notebook Webapp  </strong>   
+            <div class="pull-right">   Apirl 2017 </br></div>
          </div>
          <div>
             <p> 
             <ul>
-               <li> Build an online banking system consisting of user front and admin portal parts.  <br>
+               <li> Use Node JS to develop a notebook app that allow users to add/get/list/delete/ notes form MongoDB with authorization.   <br>
+               <li> Implement real time chat service with socket.io , locations sharing and  weather look up functionality. <br>
+               <li class="text-success"> <strong> Environment: </strong>  NodeJS, npm, Promise, SocketIO, MongoDB, Heroku, Express, Mocha. <br>
+            </ul>
+            </p> 
+         </div>
+
+         <div>
+            [<a href=".">source code</a>] [<a href=".">demo</a>]  <strong>
+            Java-Based  Online banking system  </strong>   
+            <div class="pull-right">   March 2017  </br></div>
+         </div>
+         <div>
+            <p> 
+            <ul>
+               <li> Build an online banking system consisting of user front and admin portal parts with SpringBoot Framework and Hibernate as persistent layer.  <br>
                <li>Supports functionalities like account management, transactions record and appointment arrangements.<br>
                <li class="text-success"> <strong> Environment: </strong>  Java8, Spring Boot/Bootstrap/Maven, Hibernate/Angular JS/Thymeleaf, MySQL <br>
             </ul>
             </p> 
          </div>
+
+         <div>
+            [<a href=".">paper</a>] <strong>
+            CDN research of live streaming </strong>     
+            <div class="pull-right">   September 2015  </br></div>
+         </div>
          <br>
+         <div>
+            <ul>
+               <li>  Design and implement network flow algorithm for professor in live streaming research topics e.g Twitch/YouTube Live </li>
+               <li> Implement a broadcasting prototype with ffmpeg/Wowza Media server on Microsoft Azure with over 30 VMs, achieving 10% less latency  </li>
+               <li class="text-success" > <strong> Environment: </strong>   Python, Microsoft Azure, convex optimization, vlc/ffmpeg/Wowza, Wireshark/tcpdump/tc    </li>
+            </ul>
+            <br>
+         </div>
+        
+         
+
+         <br>
+
          <div>
             <h3> Others </h3>
             <ul>
