upgrade to https

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <!--<link rel="icon" href="../../favicon.ico">-->
       <title>Welcome!</title>
       <!-- Bootstrap core CSS -->
-      <link href="http://getbootstrap.com/assets/css/docs.min.css" rel="stylesheet">
+      <link href="https://getbootstrap.com/assets/css/docs.min.css" rel="stylesheet">
       <link href="dist/bootstrap.min.css" rel="stylesheet">
       <!-- Custom styles for this template -->
       <link href="https://getbootstrap.com/docs/3.3/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
       <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
       <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-      <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+      <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
       <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -33,18 +33,18 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                <div class="navbar-nav">
                   <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                  <a class="nav-item nav-link " href="http://hyang027.com"> Articles </a>
+                  <a class="nav-item nav-link " href="https://hyang027.com"> Articles </a>
                </div>
             </div>
          </nav>
          <hr>
          <div class = "row">
             <div class = "col-md-6">
-               <a href="http://imgur.com/3jjnYsn"><img src="http://i.imgur.com/3jjnYsn.jpg" title="source: imgur.com" style="width:230px;height:228px;"/></a>
+               <a href="http://imgur.com/3jjnYsn"><img src="https://i.imgur.com/3jjnYsn.jpg" title="source: imgur.com" style="width:230px;height:228px;"/></a>
             </div>
             <div class = "col-md-6">
                <p>Hi! I'm Hui Yang, I received my Master's from UC Riverside and my Bachelor's from  <a href="http://en.wikipedia.org/wiki/Shenzhen_University"> Shenzhen University.</a>
-                  <br><br>I grow up in <a href="http://en.wikipedia.org/wiki/Shenzhen">Shenzhen</a>, which is next to Hong Kong. <br> <br>
+                  <br><br>I grow up in <a href="https://en.wikipedia.org/wiki/Shenzhen">Shenzhen</a>, which is next to Hong Kong. <br> <br>
                   My area of interests are computer networks and distributed systems. Now I am working as a backend engineer at a small startup company at Torrance, CA.<br> <br>
                   <strong>Email</strong>: csseryang [at] gmail [dot] com
                </p>
@@ -63,6 +63,7 @@
          </div>
          <p>  
          <ul>
+            <li> Integrate payment service with Stripe API to support Ali Pay/Apple Pay/Debit/Credit Card payment. </li>
             <li> Migrate Java backend Code to AWS with Api Gateway/Lambda/DynamoDB to achieve serverless architecture.</li>
             <li> Implement tension test service with Java Multi-threading and Apache module by mimicking user actions with APIs. </li>
             <li> Extend and maintain RESTFul APIs to support IOS/Android live streaming apps and Html5 Web Apps.  </li>
