--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h3>Project Experience</h3>
          </div>
             <div>
-            [<a href=".">source code</a>] [<a href=".">demo</a>]  <strong>
+            <!--  [<a href=".">source code</a>] [<a href=".">demo</a>]  <strong> -->
             NodeJS Notebook Webapp  </strong>   
             <div class="pull-right">   Apirl 2017 </br></div>
          </div>
@@ -91,7 +91,7 @@
          </div>
 
          <div>
-            [<a href=".">source code</a>] [<a href=".">demo</a>]  <strong>
+             <!--  [<a href=".">source code</a>] [<a href=".">demo</a>]  <strong> -->
             Java-Based  Online banking system  </strong>   
             <div class="pull-right">   March 2017  </br></div>
          </div>
@@ -106,7 +106,7 @@
          </div>
 
          <div>
-            [<a href=".">paper</a>] <strong>
+             <!--  [<a href=".">paper</a>] <strong> -->
             CDN research of live streaming </strong>     
             <div class="pull-right">   September 2015  </br></div>
          </div>
