--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <strong>Email</strong>: csseryang [at] gmail [dot] com
                </p>
                [<a href="https://drive.google.com/open?id=0B428rXBxUzFeSVVnUWZWOXdPQUU">cv</a>] [ <a href="https://www.linkedin.com/in/hui-yang-3b5482a1
-                  "> Linkedin</a>] [ <a href="https://github.com/csseryang"> Github</a>]
+                  "> Linkedin</a>] [ <a href="https://github.com/csseryang"> Github</a>] [ <a href="https://hyang027.com"> Blog </a>]
             </div>
          </div>
          <hr>
